--- a/openatlas/templates/user/update.html
+++ b/openatlas/templates/user/update.html
@@ -5,5 +5,5 @@
     {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-     {{ form|display_form }}
+     {{ form|display_form('user-form') }}
 {% endblock %}
