--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -2,6 +2,16 @@
 {% block breadcrumb %}{{ _('overview')|uc_first }}{% endblock %}
 {% block content %}
     {% if current_user.is_authenticated %}
+        {% if session['login_previous_success']: %}
+            <p style="font-size:0.9em;">
+                {{ _('last login')|uc_first }}: {{ session['login_previous_success'] }}
+                {% if session['login_previous_failures'] > 0 %}
+                    - {{ _('failed logins since last login')|uc_first }}: {{ session['login_previous_failures'] }}
+                {% endif %}
+            </p>
+        {% else %}
+            <p style="margin-top:1em;">{{ _('first login') }}</p>
+        {% endif %}
         {{ tables['counts']|pager }}
         {% if tables['bookmarks'].data %}
             <h1>Bookmarks</h1>
