--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -110,7 +110,7 @@
         </div>
         <div id="content">
             <div style="float:left">{% block content %}{% endblock %}</div>
-            {% if debug %}
+            {% if debug and 'admin'|is_authorized %}
                 <div class="data-table" style="float:right;margin:1em;">
                     <p>Debug</p>
                     {% for name, value in debug_model.items() %}
