cleanup before version release

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -132,9 +132,9 @@
                         {% endfor %}
                     {% endif %}
                 </div>
-
             {% endif %}
             {% if 'craws.net' in request['url_root'] %}
+                <div style="clear:both;"></div>
                 <div id="powered-by">
                     Another <a target="_blank" href="http://openatlas.eu">OpenAtlas</a> project powered by
                     <a target="_blank" href="http://craws.net">craws.net</a>
