--- a/openatlas/templates/index/contact.html
+++ b/openatlas/templates/index/contact.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index_faq') }}">{{ _('overview')|uc_first }}</a> >
+    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a> >
     {{ _('contact')|uc_first }}
 {% endblock %}
 {% block content %}
