--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -2,17 +2,22 @@
 {% block breadcrumb %}{{ _('overview')|uc_first }}{% endblock %}
 {% block content %}
     {% if current_user.is_authenticated %}
-        {% if session['login_previous_success']: %}
-            <p style="font-size:0.9em;">
-                {{ _('last login')|uc_first }}: {{ session['login_previous_success'] }}
-                {% if session['login_previous_failures'] > 0 %}
-                    - {{ _('failed logins')|uc_first }}: {{ session['login_previous_failures'] }}
-                {% endif %}
-            </p>
-        {% else %}
-            <p style="margin-top:1em;">{{ _('first login') }}</p>
-        {% endif %}
-        {{ tables['counts']|pager }}
+        <div style="float:left;margin-right:2em;">
+            {{ tables['counts']|pager }}
+        </div>
+        <div style="float:left;">
+            {% if session['login_previous_success']: %}
+                <p style="font-size:0.9em;">
+                    {{ _('last login')|uc_first }}: {{ session['login_previous_success'] }}
+                    {% if session['login_previous_failures'] > 0 %}
+                        - {{ _('failed logins')|uc_first }}: {{ session['login_previous_failures'] }}
+                    {% endif %}
+                </p>
+            {% else %}
+                <p style="margin-top:1em;">{{ _('first login') }}</p>
+            {% endif %}
+        </div>
+        <div style="clear:both;"></div>
         {% if tables['bookmarks'].data %}
             <h1>Bookmarks</h1>
             {{ tables['bookmarks']|pager }}
