--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -4,5 +4,5 @@
     {{ _('login')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form() }}
+    {{ form|display_form('login-form') }}
 {% endblock %}
