--- a/openatlas/templates/event/insert.html
+++ b/openatlas/templates/event/insert.html
@@ -3,5 +3,5 @@
      <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a> > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
-     {% include 'event/form.html' %}
+     {{ form|display_form() }}
 {% endblock %}
