--- a/openatlas/templates/hierarchy/index.html
+++ b/openatlas/templates/hierarchy/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('hierarchy')|uc_first }}{% endblock %}
 {% block content %}
-
+    {{ tabs|safe }}
 {% endblock %}
