--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -10,16 +10,19 @@
         <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
         <link rel="stylesheet" href="/css/reset.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/js/jquery/jquery-ui-1.12.1/jquery-ui.min.css" />
+        <link rel="stylesheet" href="/js/jquery/jstree-3.3.3/themes/default/style.min.css" />
         <link rel="stylesheet" href="/css/style.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/css/color.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/css/images.css?v={{ config['VERSION'] }}" />
         <script src="/js/jquery/jquery-3.1.1.min.js"></script>
+        <script src="/js/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="/js/jquery/tablesorter-2.28.5/js/jquery.tablesorter.min.js"></script>
         <script src="/js/jquery/tablesorter-2.28.5/js/jquery.tablesorter.widgets.min.js"></script>
         <script src="/js/jquery/tablesorter-2.28.5/js/extras/jquery.tablesorter.pager.min.js"></script>
         <script src="/js/jquery/tablesorter-2.28.5/js/parsers/parser-input-select.min.js"></script>
         <script src="/js/jquery/jquery-validation-1.15.0/jquery.validate.min.js"></script>
-        <script src="/js/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+        <script src="/js/jquery/jstree-3.3.3/jstree.min.js"></script>
+        <script src="/js/jquery/jstree-3.3.3/jstree.search.js"></script>
         <script src="/js/tinymce/tinymce.min.js"></script>
         <script src="/js/functions.js"></script>
         <script src="/js/forms.js"></script>
