--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -8,6 +8,10 @@ html, body, input, select, textarea {
     display: none;
 }
 
+.jstree li > a > .jstree-icon {
+    display: none;
+}
+
 a {
     font-weight: bold;
     text-decoration: none;
@@ -322,7 +326,8 @@ input[type=submit] {
 .ui-state-active,
 .ui-state-default,
 .ui-tabs .ui-tabs-panel,
-.tabs-container .ui-widget-header, .ui-widget-header,
+.tabs-container .ui-widget-header,
+.ui-widget-header,
 .ui-widget-content .ui-state-default,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-default,
@@ -331,6 +336,7 @@ input[type=submit] {
     border: none;
     background: none;
 }
+
 
 /* important to hide jquery ui dotted line of selected tabs */
 :focus {
