--- a/openatlas/static/css/color.css
+++ b/openatlas/static/css/color.css
@@ -43,6 +43,7 @@ table.tablesorter tfoot tr th {
 a,
 .info,
 span.tooltip,
+.jstree-default .jstree-search,
 #menu div a:hover,
 #menu div.active a,
 #menu div.active a:hover,
