--- a/openatlas/static/css/color.css
+++ b/openatlas/static/css/color.css
@@ -33,6 +33,7 @@ span.button,
 .changelog-version,
 .inverse-heading,
 .ui-widget-header,
+.ui-widget-content .button-bar a,
 .ui-state-default a:link,
 .ui-state-default a:visited,
 table.tablesorter thead tr th,
