--- a/openatlas/templates/actor/insert.html
+++ b/openatlas/templates/actor/insert.html
@@ -3,5 +3,5 @@
      <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a> > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
-     {% include 'actor/form.html' %}
+     {{ form|display_form() }}
 {% endblock %}
