--- a/openatlas/templates/node/index.html
+++ b/openatlas/templates/node/index.html
@@ -26,7 +26,7 @@
                                             name="name_search"
                                             style="width:8em;"/>
                                         <input type="hidden" name="mode" value="insert" />
-                                        <button value="insert" name="add-node-submit" type="submit">+</button>
+                                        <!-- button value="insert" name="add-node-submit" type="submit">+</button -->
                                         {% if not node.system and 'manager'|is_authorized: %}
                                         {% endif %}
                                     </form>
