--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a> >
-    <a href="{{ url_for('content_view', item=item) }}">{{ item|uc_first }}</a> >
-    {{ _('edit')|uc_first }}
+    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
+    > <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
+    > <a href="{{ url_for('content_view', item=item) }}">{{ item|uc_first }}</a>
+    > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
     <form method="post">
