--- a/openatlas/templates/content/view.html
+++ b/openatlas/templates/content/view.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a> > {{ item|uc_first }}
+    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
+    > <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
+    > {{ item|uc_first }}
 {% endblock %}
 {% block content %}
     <div class="button-bar">
