--- a/openatlas/templates/user/index.html
+++ b/openatlas/templates/user/index.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ _('user')|uc_first }}{% endblock %}
+{% block breadcrumb %}
+    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
+    > {{ _('user')|uc_first }}
+{% endblock %}
 {% block content %}
     <div class="button-bar">
         <a href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
