--- a/openatlas/templates/user/insert.html
+++ b/openatlas/templates/user/insert.html
@@ -1,7 +1,9 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-     <a href="{{ url_for('user_index') }}">{{ _('user')|uc_first }}</a> > + {{ _('user')|uc_first }}
+    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
+    > <a href="{{ url_for('user_index') }}">{{ _('user')|uc_first }}</a>
+    > + {{ _('user')|uc_first }}
 {% endblock %}
 {% block content %}
-     {{ form|display_form('user-form') }}
+    {{ form|display_form('user-form') }}
 {% endblock %}
