--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -11,9 +11,9 @@
     <div id="tab-info">
         <div class="button-bar">
             {% if 'editor'|is_authorized and event.name != config['EVENT_ROOT_NAME']: %}
-                <a href="{{ url_for('event_update', event_id=event.id) }}">{{ _('edit')|uc_first }}</a>
+                <a href="{{ url_for('event_update', id_=event.id) }}">{{ _('edit')|uc_first }}</a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ event.name.replace('\'', '') }}?')"
-                   href="{{ url_for('event_delete', event_id=event.id) }}">{{ _('delete')|uc_first }}</a>
+                   href="{{ url_for('event_delete', id_=event.id) }}">{{ _('delete')|uc_first }}</a>
             {% endif %}
             {{ event.id|bookmark_toggle }}
         </div>
