--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -10,9 +10,9 @@
     <div id="tab-info">
         <div class="button-bar">
             {% if 'editor'|is_authorized: %}
-                <a href="{{ url_for('source_update', source_id=source.id) }}">{{ _('edit')|uc_first }}</a>
+                <a href="{{ url_for('source_update', id_=source.id) }}">{{ _('edit')|uc_first }}</a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ source.name.replace('\'', '') }}?')"
-                   href="{{ url_for('source_delete', source_id=source.id) }}">{{ _('delete')|uc_first }}</a>
+                   href="{{ url_for('source_delete', id_=source.id) }}">{{ _('delete')|uc_first }}</a>
             {% endif %}
             {{ source.id|bookmark_toggle }}
         </div>
